# beamcommander3

./: .gitignore  DEVELOPER.md  README.md  start.sh
.github/: FUNDING.yml
.github/workflows/: pages.yml  release-macos.yml  release.yml
backend/: CMakeLists.txt  build.sh  laser_daemon.cpp  midi_map.json
doc/: BeamCommander AKAI APC40 MK2 Mapping.key
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/scripts/: screenshots.mjs
frontend/src/: App.vue  style.css
frontend/src/components/: ControlPanel.vue  CuePanel.vue  FloatingPanel.vue  LaserScene.vue  LasersPanel.vue  TouchDock.vue  ZoningPanel.vue
frontend/src/composables/: useLaserSocket.js
packaging/: AppIcon.icns  Info.plist.template  launcher.sh  make_icon.py  run.sh  run_windows.bat  windows_installer.iss
website/: index.html  style.css
